fixed some extra space between sections

--- a/Premier/style.css
+++ b/Premier/style.css
@@ -434,7 +434,7 @@ body {
 
 #page5 {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   padding: 2vw 5vw 0;
 }
 
@@ -448,7 +448,7 @@ body {
 
 #page5 .profile2 {
   width: 100%;
-  height: 15%;
+  height: 18%;
   padding: 1vw;
   border-top: 1px solid #000;
   display: flex;
@@ -468,7 +468,7 @@ body {
 }
 
 .profile2 img {
-  height: 100%;
+  height: 110%;
   width: 8%;
   border-radius: 50%;
   justify-self: flex-start;
@@ -489,6 +489,10 @@ body {
   font-size: 1vw;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+#page6 {
+  padding: 2vw 5vw 0;
 }
 
 #scroll-x {
